--- a/src/main/resources/db-secure-dev.yaml
+++ b/src/main/resources/db-secure-dev.yaml
@@ -2,4 +2,4 @@ db:
   host: "![o/6/+mgmyDF16sF0D8mN1w==]"
   port: "![/M0rjtjpG+0=]"
   user: "![+6f/uYnEWgY=]"
-  password: "![b1GWnCcewQtJoXtdfdQENw==]"
+  password: "![+6f/uYnEWgY=]"
